# workspace

./: README.md
algorithm-w/: Cargo.toml
axum-kvs/: Cargo.toml
axum-server-example/: Cargo.toml
bpf/: bpf_fs_operation_distribution.py
bpf-sample/: Makefile  bpf-sample.c
calclet/: Cargo.toml
di-transaction/: Cargo.toml
fsharp-regex/: Program.fs  README.md  Test.fs  fsharp-regex.fsproj
go-mod-graph-to-dot/: go-mod-graph-to-dot.rb
go-rest-server/: .gitignore  go.mod  go.sum  main.go
hash-functions/: hashes.cpp
haskell-cont/: README.md  main.hs
haskell-reader/: ChangeLog.md  README.md  haskell-reader.cabal  package.yaml  stack.yaml
haskell-stm/: ChangeLog.md  README.md  haskell-stm.cabal  package.yaml
hello-akka-stream/: build.sbt
hello-cue/: check.cue  data.yaml  dup.cue  fold.cue  imports.cue  json.cue  lists.cue  schema.cue  scopes.cue  structs.cue  templates.cue  types.cue
hello-electron/: index.html  main.js  package-lock.json  package.json
hello-elm/: index.html
hello-gatsby/: package-lock.json  package.json
hello-parsec/: ChangeLog.md  README.md  hello-parsec.cabal  package.yaml
hello-percel/: index.html  index.js  package.json
hello-pingora/: Cargo.toml
hello-purescript/: packages.dhall
hello-react/: package-lock.json  package.json
hello-tla-plus/: Counter.tla  Hello.tla  HourClock.cfg  HourClock.tla  TCommit.tla  squares.tla
hello-wasm/: demo.wat
hello-webpack/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
hello-wgpu/: Cargo.toml
hello-wgpu/src/: main.rs
hs-llvm-calc/: ChangeLog.md  README.md  hs-llvm-calc.cabal  package.yaml
io-monad-in-rust/: Cargo.toml
jsprimer/: index.html  index.js
kaleidoscope-hs/: .editorconfig  ChangeLog.md  README.md  kaleidoscope-hs.cabal  package.yaml
kodein-sample/: .gitignore  build.gradle  schema.sql  settings.gradle
kotlin-native/: .gitignore
lambda/: Eval.hs  Lambda.hs  Main.hs  Makefile  Parse.hs  Syntax.hs
learn-js-2025/: flake.nix
learning-alloy/: spanning-tree.als
learning-chainer/: .gitignore  ae.py  download_ptb.sh  iris.py  w2v.py
ml/: ml.cabal  (+2 more)
oauth-explained-rust/: Cargo.toml  start-keycloak
oauth-explained-rust/src/: main.rs
pingora-sample1/: Cargo.toml
pingora-sample1/src/: main.rs
rust-bbs/: Cargo.toml  run
rust-bbs/sql/: comments.sql  threads.sql  users.sql
rust-bbs/src/: main.rs
rust-bbs/templates/: index.html
tracing-sample/: Cargo.toml
tracing-sample/src/: formatter.rs  main.rs
(+340 files in other folders)
