[package]
name = "oauth-explained-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# Web フレームワーク
axum = "0.7"

# セッションのため
tower = "0.4"
tower-sessions = "0.8"

# URL の組み立て
url = "2"

# HTTPクライアント
reqwest = "0.11.23"

# エラーハンドリング
anyhow = "1"

# 暗号学的乱数
getrandom = "0.2"

# エンコード/デコード
base64 = "0.21.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
