[package]
name = "pingora-sample1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
env_logger = "0.11.2"
http = "1.0.0"
log = "0.4.21"
once_cell = "1.19.0"
pingora = { version = "0.1.0", features = ["lb"] }
regex = "1.10.3"
