[package]
name = "tracing-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-serde = "0.2"
log = "0.4"

serde = "1"
serde_json = "1"
base64 = "0.22"

chrono = { version = "0.4", features = ["serde"] }
